// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
.c0 {
  border: none;
  padding: .5rem;
  background: none;
  font-size: 1rem;
  cursor: pointer;
  border-radius: 3px;
  color: rgba(0,0,0,.87);
}

.c0:hover,
.c0:focus {
  outline: none;
  background: rgba(0,0,0,.15);
}

<button
  class="c0"
/>
`;

exports[`Button should render with light font 1`] = `
.c0 {
  border: none;
  padding: .5rem;
  background: none;
  font-size: 1rem;
  cursor: pointer;
  border-radius: 3px;
  color: rgba(255,255,255,1);
}

.c0:hover,
.c0:focus {
  outline: none;
  background: rgba(0,0,0,.15);
}

<button
  class="c0"
/>
`;
